--- a/glossary.html
+++ b/glossary.html
@@ -29,15 +29,13 @@
                 </li>
                 <li><a href="http://127.0.0.1:5501/fpsbasics.html">FPS Basics</a></li>
                 <li><a href="http://127.0.0.1:5501/glossary.html">Glossary</a></li>
-                <li><a href="#">Sitemap</a></li>
+                <li><a href="http://127.0.0.1:5501/sitemap.html">Sitemap</a></li>
                 <li><a href="http://127.0.0.1:5501/contactus.html">Contact Us</a></li>
             </ul>
         </div>
     </nav>
 
     <h1>Glossary</h1>
-
-    <h3>Official Valorant Terminology</h3>
 
     <div class="terms">
         <p>
@@ -79,10 +77,270 @@
                 average of 2500 less credit value than the enemy team's.</li>
             <li>Ult: Shorthand for Ultimate ability.</li>
         </ul>
+
+        Map Terminology
+
+        <ul>
+            <li>
+                Back/Back site: The parts of a spike site that are closest to Defender Spawn or the furthest parts of a
+                site from an attacker's perspective.
+            </li>
+            <li>
+                Cubby: A deep corner or recessed section of a passageway that players can hide in and peek from.
+            </li>
+            <li>
+                Elbow: A tight location on a map that contains two or three 90-degree angles.
+            </li>
+            <li>
+                Heaven: A high location where snipers and other long-ranged weapons are usually used from.
+            </li>
+            <li>
+                Hell: A low location underneath another part of the map, usually below places regarded as "Heaven".
+            </li>
+            <li>
+                Link: A short passageway that serves as a connector between two large sections of the map, such as 'Mid
+                to B Defender Side' or 'B Site to C Site'.
+            </li>
+            <li>
+                Lobby: A generic quadrilateral area close to the Defender Spawn, often used when the area doesn't have
+                distinguishable features to give it a more specific callout.
+            </li>
+            <li>
+                Long: A long passageway/pathway or the longer of two pathways leading from the attacker side of the map
+                to the site.
+            </li>
+            <li>
+                Main: A section of neutral ground situated between a spike site and Attacker Spawn, kept out of bounds
+                behind the barriers before a round starts.
+            </li>
+            <li>
+                Mid: The middle section of the map.
+            </li>
+            <li>
+                Short: A short passageway/pathway or the shorter of two pathways leading from the attacker side of the
+                map to the site.
+            </li>
+            <li>
+                Spawn: Refers to the starting location where players spawn at the beginning of a round.
+            </li>
+        </ul>
+
+        Community Terminology
+        <ul>
+            <li>
+                ADS: Meaning "Aiming Down Sights", referring to when you use Alternate Fire on a weapon to directly look
+                down the gun's sights. This zooms in slightly and can reduce spread and recoil, though often at the cost
+                of reduced fire rate.
+            </li>
+            <li>
+                Anchor: To play on a site as a defender so as to stall a push by the attackers, to buy time to allow
+                teammates to rotate to the site to help defend.
+            </li>
+            <li>
+                Angles: A corner of the map where a player who wants to move past has to risk putting themselves in
+                danger in case an enemy is around the corner and waiting to get a kill before the player can stop moving
+                and fire back.
+            </li>
+            <li>
+                Angle advantage: A player further away from an angle has better angle advantage than someone closer to
+                it on the opposite side due to the closer player's model becoming visible as they peek before they are
+                able to see the further player's model themselves.
+            </li>
+            <li>
+                Anti-eco: Refers to buying weapons to try to keep an economic lead over a team that is resorting to
+                saving creds in an eco-round. Typically avoiding weapons that avoid close quarters combat since a team
+                that is having an eco-round will have to resort to cheaper, close range weapons such as shotguns, SMGs
+                and pistols.
+            </li>
+            <li>
+                Anti-flash: A tactic that has a player take cover from where they expect an enemy to use a flash, then
+                swing out after it is detonated to take out any enemies attempting to play off of the flash.
+            </li>
+            <li>
+                Baiting: Allowing a teamate to enter a entry-frag without the intent to trade for them in the event that
+                they are killed by an opponent. This usually wastes the entry-fragger's utility and info gained as the
+                opponent can reposition/ recover without being punished/refragged/traded, thus leaving the team at a
+                disadvantage.
+            </li>
+            <li>
+                Bottom frag: The player with the least amount of kills on a team or for the match.
+            </li>
+            <li>
+                Callout: Refers to indicating a place on a map by a particular name, such as “Heaven”, or “Elbow”.
+            </li>
+            <li>
+                Camp: To defensively hold an area, usually a close angle, for a long time for an enemy to move past
+                rather than seeking them out.
+            </li>
+            <li>
+                Clearing angles: To check whether an opponent is around the corner or in a particular corner.
+            </li>
+            <li>
+                Clearing site: When the attackers thoroughly check the site before planting the spike to decrease the
+                chance of a hidden defender sneaking upon them.
+            </li>
+            <li>
+                Clearing site: When the attackers thoroughly check the site before planting the spike to decrease the
+                chance of a hidden defender sneaking upon them.
+            </li>
+            <li>
+                Crosshair placement: Where a player positions their crosshair as they move across the map or hold
+                angles. Good crosshair placement keeps it in the most likely position that an opponent's head will
+                appear in so that they can be shot and killed in as little time as possible.
+            </li>
+            <li>
+                Crossfire: When two teammates position and fire so they are on opposite sides of an enemy between them.
+            </li>
+            <li>
+                CT: Meaning "Counter Terrorists", an equivalent to VALORANT defenders brought over by Counter Strike
+                players.
+            </li>
+            <li>
+                Default Plant: The most common location on site where the spike is planted.
+            </li>
+            <li>
+                Default: When you’re on the attacking side and your team plays a neutral/non-committal strategy to gain
+                information and/or look for picks.
+            </li>
+            <li>
+                Dink: Refers to a headshot that doesn’t kill an enemy, usually used to indicate that the target is close
+                to dying.
+            </li>
+            <li>
+                Double Swing: Two players swinging at once in order to overwhelm an opponent and force them to decide
+                which player to shoot at usually ending in a trade.
+            </li>
+            <li>
+                Eco/eco round: When a team chooses to save credits in order to have the ability to full buy during the
+                following round and to destabilize the opponents' economy.
+            </li>
+            <li>
+                Entry fragger: The player or agent who looks to initiate the fight when attacking by entering first and
+                getting the opening kill and gaining information about the opponent's positions.
+            </li>
+            <li>
+                Fake Defuse: Pretending to defuse the spike in order to force the attackers to peek to attempt to defend
+                the spike from being defused.
+            </li>
+            <li>
+                Flank: When a player sneaks around to attack the enemy team from behind.
+            </li>
+            <li>
+                Flick: To quickly move your crosshair and shoot, usually made in instant response to spotting an enemy
+                who's position isn't currently that close to where your crosshair is positioned.
+            </li>
+            <li>
+                Force buy: Buying the best possible weapons while lacking enough creds for a full-buy to hold onto a
+                lead, the half is close to ending, gain an economic advantage or to increase the odds of winning a round
+                to stave off a loss when the opponents are close to victory.
+            </li>
+            <li>
+                Frag: Alternative term for a kill.
+            </li>
+            <li>
+                Full-buy: When your team is able to buy to be fully equipped. Usually a combination of heavy shields and
+                a rifle.
+            </li>
+            <li>
+                Game sense: A player's intuitive ability to predict the positions and actions of opponents given the
+                current gamestate.
+            </li>
+            <li>
+                Half-buy: Buying the best equipment possible while maintaining enough creds to full-buy in the next
+                round.
+            </li>
+            <li>
+                Holding angles: When a player watches and aims at a corner of the map in anticipation of any enemies who
+                want to peek around it.
+            </li>
+            <li>
+                Instalock: When an ally immediately selects and locks in their agent choice when they enter agent
+                select. Often associated with players who pick Duelists due to their popularity
+            </li>
+            <li>
+                Jiggle peek: To quickly peek out and return to cover to gain information or to bait an enemy into
+                shooting at you, giving up their location.
+            </li>
+            <li>
+                Lineup: A particular positioning set up to guarantee that your ability lands in a certain way.
+            </li>
+            <li>
+                Lurk: To position and look out to catch flankers.
+            </li>
+            <li>
+                NT: Meaning "Nice Try", It refers to by players after someone in their team comes closer to clutching up
+                on a round, but fails at the end.
+            </li>
+            <li>
+                Peek: To poke out of cover to look for enemies.
+            </li>
+            <li>
+                Peeker’s Advantage: Due to technical lag time from the game, an aggressive peeker will see an enemy
+                behind cover slightly before the enemy sees them.
+            </li>
+            Pistol Round: The first round of each half where all players only have enough credits to purchase Sidearm
+            guns.
+            <li>
+                Play for picks: To play passively and wait to punish enemies that push out aggressively.
+            </li>
+
+            <li>
+                Playing for time: Playing safely in order to not die, and waste time in order to fulfill the win
+                condition.
+            </li>
+
+            <li>
+                Pre-fire: To preemptively fire at an area or angle that enemies are often at. This can allow you to get
+                the jump on an enemy without having to rely on your reaction time to fire at them.
+                Refrag: See "Trade"
+            </li>
+
+            <li>
+                Retake: When the defenders concede a site to the attackers in order to regroup and coordinate to regain
+                control of the site.
+            </li>
+
+            <li>
+                Rotate: When a player or team commits to traveling to another location on the map, usually to another
+                site.
+            </li>
+
+            <li>
+                Saving: When the opponent team's victory is guaranteed for a round, and remaining teammates choose to
+                run and hide in order to avoid losing their weapons by dying to opponents.
+            </li>
+
+            <li>
+                Stack: To have many team members attack a site or defend an area.
+            </li>
+            <li>
+                Stick: When a player commits to defusing a spike rather than tapping it to fake out an enemy.
+            </li>
+            <li>
+                Top frag: The player with the most kills on a team or for the match.
+            </li>
+
+            <li>
+                TP: Short for “teleport”. This can either refer to an agent using a teleport ability or using one of the
+                teleporters on Bind.
+            </li>
+
+            <li>
+                Trade: When a player dies but their teammate immediately kills the enemy that killed them.
+            </li>
+
+            <li>
+                Wallbang: Getting a kill by shooting through a wall or terrain.
+            </li>
+
+            <li>
+                Whiffing: Missing a shot
+            </li>
+        </ul>
         </p>
     </div>
 
-
+    &nbsp;
 </body>
 
 </html>
