--- a/fpsbasics.html
+++ b/fpsbasics.html
@@ -119,7 +119,7 @@
                 </li>
                 <li><a href="http://127.0.0.1:5501/fpsbasics.html">FPS Basics</a></li>
                 <li><a href="http://127.0.0.1:5501/glossary.html">Glossary</a></li>
-                <li><a href="#">Sitemap</a></li>
+                <li><a href="http://127.0.0.1:5501/sitemap.html">Sitemap</a></li>
                 <li><a href="http://127.0.0.1:5501/contactus.html">Contact Us</a></li>
             </ul>
         </div>
