project 1st draft

--- a/sitemap.html
+++ b/sitemap.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="styles/sitemap.css" />
     <link rel="icon" type="image/png" href="images/valicon.jpg" />
 </head>
+
 <body>
     <div>
         <img class="logo" src="images/valicon.jpg" alt="logo" title="logo" width="50" />
@@ -33,7 +35,42 @@
         </div>
     </nav>
 
-    <h1> Sitemap </h1>
-    
+    <h1> Valorant Sitemap </h1>
+    <div class="row">
+        <div class="column">
+            <p><b>Homepage</b></p>
+            <ul>
+                <li> <a href="http://127.0.0.1:5501/index.html">Homepage</a></li>
+            </ul>
+        </div>
+        <div class="column">
+            <p><b>About Valorant</b></p>
+            <ul>
+                <li> <a href="http://127.0.0.1:5501/agents.html">Agents</a>
+                <li> <a href="http://127.0.0.1:5501/maps.html">Maps</a></li>
+                <li><a href="http://127.0.0.1:5501/weapons.html">Weapons</a></li>
+            </ul>
+        </div>
+        <div class="column">
+            <p><b>FPS Basics</b></p>
+            <ul>
+                <li><a href="http://127.0.0.1:5501/fpsbasics.html">FPS Basics</a></li>
+            </ul>
+        </div>
+
+        <div class="column">
+            <p><b>Glossary</b></p>
+            <ul>
+                <li><a href="http://127.0.0.1:5501/glossary.html">Glossary</a></li>
+            </ul>
+        </div>
+
+        <div class="column">
+            <p><b>Contact Info</b></p>
+            <ul>
+                <li><a href="http://127.0.0.1:5501/contactus.html">Contact Us</a></li>
+            </ul>
+        </div>
 </body>
+
 </html>
