--- a/weapons.html
+++ b/weapons.html
@@ -22,15 +22,15 @@
                 <li class="dropdown">
                     <a href="javascript:void(0)" class="dropbtn">About Valorant</a>
                     <div class="dropdown-content">
-                        <a href="http://127.0.0.1:5501/agents.html">Agents</a>
-                        <a href="http://127.0.0.1:5501/maps.html">Maps</a>
-                        <a href="http://127.0.0.1:5501/weapons.html">Weapons</a>
+                        <a href="agents.html">Agents</a>
+                        <a href="maps.html">Maps</a>
+                        <a href="weapons.html">Weapons</a>
                     </div>
                 </li>
-                <li><a href="http://127.0.0.1:5501/fpsbasics.html">FPS Basics</a></li>
-                <li><a href="http://127.0.0.1:5501/glossary.html">Glossary</a></li>
-                <li><a href="http://127.0.0.1:5501/sitemap.html">Sitemap</a></li>
-                <li><a href="http://127.0.0.1:5501/contactus.html">Contact Us</a></li>
+                <li><a href="fpsbasics.html">FPS Basics</a></li>
+                <li><a href="glossary.html">Glossary</a></li>
+                <li><a href="sitemap.html">Sitemap</a></li>
+                <li><a href="contactus.html">Contact Us</a></li>
             </ul>
         </div>
     </nav>
