--- a/glossary.html
+++ b/glossary.html
@@ -8,6 +8,22 @@
     <title>Glossary</title>
     <link rel="stylesheet" href="styles/glossary.css" />
     <link rel="icon" type="image/png" href="images/valicon.jpg" />
+    <style>
+        #lyrics {
+            position: absolute;
+            color: Navy;
+            font-family: Arial;
+        }
+
+        .mapnotes {
+            position: relative;
+            border: 1px solid black;
+            height: 50px;
+            margin-left: 50px;
+            margin-right: 50px;
+            background-color: rgb(247, 110, 56);
+        }
+    </style>
 </head>
 
 <body>
@@ -36,6 +52,9 @@
     </nav>
 
     <h1>Glossary</h1>
+    <div class="mapnotes">
+        <h3 id="lyrics">This text will move</h3>
+    </div>
 
     <div class="terms">
         <p>
@@ -341,6 +360,37 @@
     </div>
 
     &nbsp;
+
+    <script>
+        const LYRICS = [
+
+            "Valorant Terminology 101",
+            "It's important to understand these commonly used words and phrases to communicate with your team"
+
+        ];
+        const lyricsEl = document.getElementById("lyrics");
+        let p = 5;
+        let index = 0;
+
+        function move() {
+            lyricsEl.innerHTML = LYRICS[index];
+            lyricsEl.style.left = p + "px";
+            if (p > document.querySelector("div").clientWidth - 350) {
+                p = 5;
+                index++;
+                if (index === LYRICS.length) {
+                    index = 0;
+                }
+            } else {
+                p = p + 5;
+            }
+            setTimeout(move, 50);
+        }
+
+        document.addEventListener("DOMContentLoaded", function () {
+            move();
+        });
+    </script>
 </body>
 
 </html>
